[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "templafy"
path = "src/lib.rs"
crate-type = ["rlib"]
required-features = ["cli"]

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
pathdiff = { version = "0.2.1" }
